# botter

./: .gitignore  docker-compose.yaml  pyproject.toml
.github/workflows/: cicd.yaml
src/jira_botter/: __encode__.py  __load__.py  __main__.py  controller.py  instructions.py  servicedesk.py
tests/: test_controller.py  test_instructions.py  test_servicedesk.py
